--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "supervisor -n exit src/server.js",
+    "dev": "supervisor -n exit test/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +15,6 @@
   "license": "ISC",
   "devDependencies": {
     "supervisor": "^0.12.0"
-  }
+  },
+  "dependencies": {}
 }
